# parallel_utils

./: README.md  pyproject.toml
src/parallel_utils/: __init__.py  base.py  decorators.py  parallel.py
src/parallel_utils/engines/: __init__.py  async_engine.py  sync_engine.py
