[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parallel-utils"
version = "0.1.0"
authors = [
    { name = "Evan Vera", email = "evan@instalily.ai" },
]
description = "A library for parallel execution of functions"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["parallel", "concurrent", "execution", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/parallel_utils"] 