[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parallel-utils"
version = "0.1.0"
authors = [
    { name = "Evan Vera", email = "evan@instalily.ai" },
]
description = "Decorators for parallel execution of async (I/O-bound) and sync (CPU-bound/blocking I/O) functions."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["parallel", "concurrent", "execution", "async", "asyncio", "thread", "threaded", "decorator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Instalily/parallel_utils"
Repository = "https://github.com/Instalily/parallel_utils.git"
Documentation = "https://github.com/Instalily/parallel_utils#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/parallel_utils"] 